# fp-homework

./: .hindent.yaml  README.md  fact.hw3  fib.hw3  sample.hw3  stack.yaml
hw1/: README.md  hw1.cabal
hw1/src/: Lib.hs  TreePrinters.hs
hw1/test/: LibSpec.hs
hw2/: README.md  hw2.cabal
hw2/app/: Main.hs
hw2/src/: BlockOne.hs  BlockThree.hs  BlockThree1.hs  BlockThree2.hs  BlockThreePartTwo.hs  Parsers.hs
hw2/test/: BlockOneSpec.hs  ParsersSpec.hs
hw3/: README.md  hw3.cabal
hw3/app/: Main.hs
hw3/src/: Expressions.hs  Parser.hs  Part1.hs  Statements.hs
hw3/test/: ExpressionsSpec.hs  ParserSpec.hs  Part1Spec.hs
hw4/: hw4.cabal
hw4/app/: Main.hs
hw4/src/: BaseLens.hs  BlockOne.hs  BlockOneSub.hs  Comonads.hs  FSLens.hs
hw4/test/: BaseLensSpec.hs  BlockOneSpec.hs  ComonadsSpec.hs
hw4bench/: fib.html  hw4bench.cabal  nub.html
hw4bench/app/: Main.hs
