name:                hw1
version:             0.1.0.0
synopsis:            Synopsis for task 1
description:         Task 1 for FP ITMO course

homepage:            https://github.com/sandwwraith/fp-homework/tree/master/hw1#readme
license:             MIT
license-file:        LICENSE
author:              Leonid Startsev
maintainer:          sandwwraith@gmail.com
copyright:           2017 Leonid Startsev

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     Lib, TreePrinters
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5, random
  default-language:    Haskell2010

test-suite spec
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  hs-source-dirs:      test
  build-depends:       base >= 4.9 && < 5, hw1, hspec
  other-modules:       LibSpec
  default-language:    Haskell2010
