name:                hw3
version:             0.1.0.0
synopsis:            Synopsis for task 3
description:         Task 3 for FP ITMO course

homepage:            https://github.com/sandwwraith/fp-homework/tree/master/hw3#readme
license:             MIT
license-file:        LICENSE
author:              Leonid Startsev
maintainer:          sandwwraith@gmail.com
copyright:           2017 Leonid Startsev

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     Expressions, Statements, Parser
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5, 
                       containers, mtl, megaparsec >= 6.0, 
                       utf8-string, bytestring, exceptions
  default-language:    Haskell2010

executable hw3
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, hw3
                     , utf8-string, bytestring
  default-language:    Haskell2010

test-suite hw3-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base, hw3
                     , hspec, containers, mtl, utf8-string
  ghc-options:         -Wall -Werror
  default-language:    Haskell2010
