name:                hw4
version:             0.1.0.0
synopsis:            Synopsis for task 4
description:         Task 4 for FP ITMO course

homepage:            https://github.com/sandwwraith/fp-homework/tree/master/hw4#readme
license:             MIT
license-file:        LICENSE
author:              Leonid Startsev
maintainer:          sandwwraith@gmail.com
copyright:           2017 Leonid Startsev

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     BlockOne, BlockOneSub, BaseLens, FSLens
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5, containers, template-haskell, text,
                       lens, directory-tree, filepath
  default-language:    Haskell2010

executable hw4
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, hw4, mtl, lens
  default-language:    Haskell2010

test-suite spec
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  hs-source-dirs:      test
  build-depends:       base >= 4.9 && < 5, hw4, hspec
  other-modules:       BlockOneSpec
  default-language:    Haskell2010