name:                hw4bench
version:             0.1.0.0
synopsis:            Benchmark for task 4
description:         Task 4 for FP ITMO course

homepage:            https://github.com/sandwwraith/fp-homework/tree/master/hw4#readme
license:             MIT
author:              Leonid Startsev
maintainer:          sandwwraith@gmail.com
copyright:           2017 Leonid Startsev

category:            Benchmarks
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

benchmark hw4b
  type:                exitcode-stdio-1.0
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:       base >= 4.9 && < 5, criterion, containers
  default-language:    Haskell2010
